# vernon_tasks

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: test.yml
caddy/: dashboard.Caddyfile
docs/: ADR.html  API_REFERENCE.html  API_REFERENCE.md  DEVELOPER_GUIDE.html  DEVELOPER_GUIDE.md  PRD.html  PRD.md  TRD.html  erd.html  implementation-tracker.html  implementation-tracker.md  index.html
docs/adr/: data.html  foundation.html  index.html  operations.html  portal-okr-stack.html  portal-projects-stack.html  rest-first-hooks-for-logic.html  standalone-www-react-spa.html  ui-mobile.html
docs/assets/: layout.js  style.css
docs/portal/: README.md  index.html
docs/prd/: domain.html  features.html  index.html  ops.html  overview.html
docs/rollout/: pwa-pilot.html  pwa-pilot.md
docs/trd/: architecture.html  contracts.html  index.html  infrastructure.html  quality.html
pwa/: .gitignore  build-pwa.sh  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
pwa/e2e/: portal-okr.spec.ts  portal-projects.spec.ts  portal-shell.spec.ts  smoke.spec.ts
pwa/public/: push-handler.js
pwa/src/: AppShell.js  AppShell.tsx  i18n.js  i18n.test.js  i18n.ts  (+13 more)
vernon_tasks/: boot.py  hooks.py  modules.txt  patches.txt  setup_website.py  test_boot.py  test_setup.py
www-react/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
(+1064 files in other folders)
