[project]
name = "vernon_tasks"
authors = [{ name = "Vernon Corp", email = "dev@vernoncorp.com" }]
description = "Task and project management system with OKR, PDCA, and Agile"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "pywebpush>=2.0.0",
    "croniter>=2.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "vernon_tasks"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "    "

[tool.coverage.run]
source = ["vernon_tasks"]
omit = [
    "*/test_*.py",
    "*/tests/*",
    "*/migrations/*",
    "*/fixtures/*",
    "*/public/*",
    "*/__pycache__/*",
]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
